added basic moderation commands
includes, `ban`, `unban`, `kick`, `server mute`, `mute` and `warn`.

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,9 @@
 context_window = 10
 verbose = false
 
+[moderation]
+admin_role_name = "admin"
+
 [defaults]
 prompt = "frieren"
 negative_prompt = ""
