--- a/config.default.toml
+++ b/config.default.toml
@@ -3,6 +3,7 @@ context_window = 10
 memory_window = 50
 verbose = false
 read_channel_history = 16
+prompts_dir = 'prompts'
 
 [defaults]
 prompt = "frieren"
