Music bot and hot reloading

--- a/bot/config.default.toml
+++ b/bot/config.default.toml
@@ -5,6 +5,7 @@ verbose = false
 read_channel_history = 16
 # prompts_dir = 'prompts'
 # debug = true
+music_dir = "./music"
 
 [defaults]
 prompt = "frieren"
